--- a/css/app.css
+++ b/css/app.css
@@ -63,9 +63,12 @@ h1 {
     justify-content: center;
     align-items: center;
     box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
+    transform: rotateY(180deg);
 }
 
 .deck .card.open {
+    transition: 0.3s;
+    transform-style: preserve-3d;
     transform: rotateY(0);
     background: #02b3e4;
     cursor: default;
@@ -79,6 +82,63 @@ h1 {
     cursor: default;
     background: #02ccba;
     font-size: 33px;
+
+    animation-name: squash;
+    animation-duration: 0.4s;
+    animation-iteration-count: 1;
+    animation-direction: alternate;
+    animation-delay: 0;
+    timing-function: ease-out;
+}
+
+.deck .card.fail {
+    animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+    transform: translate3d(0, 0, 0);
+    background: red;
+}
+
+@keyframes squash {
+  0%, 100% {
+    transform: scale(1)
+  }
+
+  10%, 90% {
+    transform: scale(1.2)
+  }
+
+  20%, 80% {
+    transform: scale(1)
+  }
+
+  30%, 70% {
+    transform: scale(0.9)
+  }
+
+  40%, 60% {
+    transform: scale(1)
+  }
+
+  50% {
+    transform: scale(1.2)
+  }
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
 }
 
 /*
